Fixed title on review application. Fixed comments when there aren't applications lef tto vote.

--- a/register/templates/application_review.html
+++ b/register/templates/application_review.html
@@ -3,7 +3,7 @@
 {% load bootstrap3 %}
 {% load utils %}
 {% load static %}
-{% block title %}Vote applications - {% endblock %}
+{% block title %}Review application - {% endblock %}
 {% block head %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'lib/bars-square.css' %}">
