refactor on some phases in the dashboard

--- a/register/templates/cancel.html
+++ b/register/templates/cancel.html
@@ -48,7 +48,7 @@
                             <input type="hidden" value="cancel_anyway" name="action">
                             <button class="btn btn-danger btn-lg btn-block">Cancel anyways</button>
                         </form>
-                        <a href="{% url 'profile' %}" class="btn btn-default btn-block"> Back to profile</a>
+                        <a href="{% url 'dashboard' %}" class="btn btn-default btn-block"> Back to your dashboard</a>
                     </div>
                 </div>
             {% endif %}
