--- a/reimbursement/templates/reimbursement/mails/reimbursement_message.html
+++ b/reimbursement/templates/reimbursement/mails/reimbursement_message.html
@@ -15,6 +15,6 @@
     {% include 'include/email_line_start.html' with extra_style='text-align:center;' %}
     <a href="{{ confirm_url }}">Confirm</a>
     {% include 'include/email_line_end.html' %}
-    {% include 'register/../../../../register/templates/mails/include/cancel.html' %}
-    {% include 'register/../../../../register/templates/mails/include/closing.html' %}
+    {% include 'register/mails/include/cancel.html' %}
+    {% include 'register/mails/include/closing.html' %}
 {% endblock %}
