--- a/register/templates/phases/ticket.html
+++ b/register/templates/phases/ticket.html
@@ -4,6 +4,7 @@
     <h2>QR Code</h2>
     Please show the following QR code to our staff when you arrive for check-in.
     <img src="http://chart.googleapis.com/chart?cht=qr&chs=350x350&chl={{ application.id }}"/>
+    {% include 'include/cancel.html' %}
 
     <h2>Important information</h2>
 
