--- a/register/templates/register/mails/invitation_message.html
+++ b/register/templates/register/mails/invitation_message.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     {% include 'include/email_line_start.html' %}
-    Congratulations {{ name }}, you have been officially accepted to {{ curent_site.name }}️!<br>
+    Congratulations {{ name }}, you have been officially invited!<br><br>
     Respond to this invitation by clicking on the "Confirm" link below.
     <b>Please confirm your spot within 5 days of receiving this email. Otherwise we will give your spot to another
         hacker on the waitlist.</b>
