fix status not showing up

--- a/app/templates/modules/stats.html
+++ b/app/templates/modules/stats.html
@@ -39,7 +39,7 @@
     <thead>
     <tr>
         {% for status in module.count_status %}
-            <th>{{ status.get_status_display }}</th>
+            <th>{{ status.status }}</th>
         {% endfor %}
     </tr>
     </thead>
