fix link back to dashboard

--- a/register/templates/confirm.html
+++ b/register/templates/confirm.html
@@ -48,7 +48,7 @@
                         <br><br>
                         If you can't make it anymore, please cancel your participation <a
                             href="{% url 'cancel_app' %}">here</a>.
-                        <a href="{% url 'profile' %}" class="btn btn-default btn-block"> Back to your profile</a>
+                        <a href="{% url 'dashboard' %}" class="btn btn-default btn-block"> Back to your dashboard</a>
                     </div>
                 </div>
 
