--- a/register/templates/register/mails/include/arrival_departure_info.html
+++ b/register/templates/register/mails/include/arrival_departure_info.html
@@ -1,5 +1,6 @@
 {% load utils %}
 {% settings_value "STATIC_KEYS_TEMPLATES" as static_values %}
 {% include 'include/email_line_start.html' %}
-<b>When to Arrive</b>{{ static_values.when_to_arrive }}
+<b>When to arrive</b> {{ static_values.when_to_arrive }}<br>
+<b>When to leave</b> {{ static_values.when_to_leave }}
 {% include 'include/email_line_end.html' %}
