--- a/reimbursement/templates/reimbursement/mails/reimbursement_message.html
+++ b/reimbursement/templates/reimbursement/mails/reimbursement_message.html
@@ -15,5 +15,9 @@
     {% include 'include/email_line_start.html' with extra_style='text-align:center;' %}
     <a href="{{ confirm_url }}">Confirm</a>
     {% include 'include/email_line_end.html' %}
+    {% include 'include/email_line_start.html' %}
+    If you need an invite letter for your visa, answer this email with your full name and passport number,
+    as shown in your passport.
+    {% include 'include/email_line_end.html' %}
     {% include 'register/mails/include/closing.html' %}
 {% endblock %}
