--- a/reimbursement/templates/include/reimbursement.html
+++ b/reimbursement/templates/include/reimbursement.html
@@ -28,12 +28,12 @@
     {% elif reimbursement.friend_accepted %}
         <p>A friend uploaded a receipt that covered your travel. Let us know if you think this is an error.</p>
     {% elif reimbursement.is_accepted %}
-        <p>Your travel reimbursements tickets have been accepted. Here is the amount that we will reimburse to you (and any friend your ticket included):</p>
+        <p>Your travel reimbursement tickets have been accepted. Here is the amount that we will reimburse to you (and any friend included in your ticket):</p>
         <h4>Amount to be reimbursed: {{ reimbursement.assigned_money }}{{ reimbursement.currency_sign }}</h4>
         <p>We will send this money to your Paypal account a month or two after the event.</p>
         <h4>WARNING: You have to submit a project and demo it during the event in order to get reimbursed.</h4>
     {% elif reimbursement.needs_change %}
-        <p>Your ticket submission had an error, please upload them again.</p>
+        <p>Your ticket submission had an error, please upload your receipt again.</p>
         {% if reimbursement.change_reason %}
             <p><b>Reason</b>: {{ reimbursement.change_reason }}</p>
         {% endif %}
