add university name in reimbursement email

--- a/reimbursement/templates/reimbursement/mails/reimbursement_message.html
+++ b/reimbursement/templates/reimbursement/mails/reimbursement_message.html
@@ -16,7 +16,7 @@
     <a href="{{ confirm_url }}">Confirm</a>
     {% include 'include/email_line_end.html' %}
     {% include 'include/email_line_start.html' %}
-    If you need an invite letter for your visa, answer this email with your full name and passport number,
+    If you need an invite letter for your visa, answer this email with your full name, university name and passport number,
     as shown in your passport.
     {% include 'include/email_line_end.html' %}
     {% include 'register/mails/include/closing.html' %}
