--- a/register/templates/register/mails/invitation_message.html
+++ b/register/templates/register/mails/invitation_message.html
@@ -17,7 +17,7 @@
         {% include 'include/email_line_start.html' %}
 {#        If you have been granted reimbursement you will receive a separate email with all the information in the next few hours.#}
             Unfortunately, we don't have enough budget to cover your travel expenses. We would like to have enough money for
-            everyone but our budget is limited. Hope you can still make it! If you can't, please cancel your application invite.
+            everyone but our budget is limited. Hope you can still make it! If you can't attend, please cancel your application invite so we can offer your spot to another hacker.
         {% include 'include/email_line_end.html' %}
     {% endif %}
     {% include 'include/email_line_start.html' %}
