add close applications behaviour

--- a/app/templates/account/signup_closed.html
+++ b/app/templates/account/signup_closed.html
@@ -9,4 +9,6 @@
 
     <p>We are sorry, applications are now closed</p>
     {% include 'include/subscribe_form.html' %}
+    <br>
+    <p>Already registered? <a href="{% url 'account_login' %}">Sign in here</a>  </p>
 {% endblock %}
