--- a/register/templates/phases/profile.html
+++ b/register/templates/phases/profile.html
@@ -1,9 +1,18 @@
-<p>You will only need to fill this once, we will keep this information between editions
-{% if user.hacker %}
-You can edit it as well.
+{% load utils %}
+
+{% settings_value "STATIC_KEYS_TEMPLATES" as static_values %}
+{% if not user.hacker and not applications_open %}
+    <p>Applications have been closed. We are looking forward to welcome you next edition.</p>
+    {% include 'include/subscribe_form.html' %}
+{% else %}
+
+    <p>You will only need to fill this once, we will keep this information between editions
+        {% if user.hacker %}
+            You can edit it as well.
+        {% endif %}
+
+    </p>
+
+
+    {% include 'include/hacker_form.html' %}
 {% endif %}
-
-</p>
-
-
-{% include 'include/hacker_form.html' %}
