fix grammar errors

--- a/app/templates/include/subscribe_form.html
+++ b/app/templates/include/subscribe_form.html
@@ -2,7 +2,7 @@
 {% settings_value "STATIC_KEYS_TEMPLATES" as static_values %}
 
 {% if static_values.subscribe_url %}
-    <p>Subscribe here to be the first to know when are we open applications for next edition.</p>
+    <p>Subscribe here to be the first to know when applications for the next edition are open.</p>
     <form action="{{ static_values.subscribe_url }}"
           method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
           class="form-horizontal">
