--- a/checkin/templates/checkin/hacker.html
+++ b/checkin/templates/checkin/hacker.html
@@ -22,6 +22,9 @@
                         {% include 'include/field.html' with desc='Shirt Size' value=hacker.tshirt_size %}
                         {% include 'include/field.html' with desc='Diet' value=hacker.diet %}
                         {% include 'include/field.html' with desc='Status' value=app.get_status_display %}
+                        {% if checkin %}
+                            {% include 'include/field.html' with desc='Have signed LOPD?' value=checkin.signed_lopd|yesno:'Yes,No,Maybe' %}
+                        {% endif %}
                     </dl>
                 </div>
                 <div class="panel-footer">
@@ -35,7 +38,8 @@
                         <form action="" method="post">
                             {% csrf_token %}
                             <input type="hidden" name="app_id" value="{{ app.id }}"/>
-                            <button class="btn btn-success btn-block" name="checkin" value="checkin">Check In!</button>
+                            <button class="btn btn-success btn-block" name="checkin" value="checkin_lopd">Check In and signed!</button>
+                            <button class="btn btn-warning btn-block" name="checkin" value="checkin_nolopd">Check In but NO signature!</button>
                         </form>
                         <a class="btn btn-default btn-block" href="javascript:history.back()">Go back</a>
                     {% endif %}
