--- a/hackers/templates/include/application_form.html
+++ b/hackers/templates/include/application_form.html
@@ -38,6 +38,16 @@
             }).fail(function (jqXHR, textStatus, errorThrown) {
                 console.error("AJAX call failed: " + textStatus + ", " + errorThrown);
             });
+
+            $.ajax({
+                type: "GET",
+                url: "{% static 'degrees.json' %}",
+                dataType: "json"
+            }).done(function (res) {
+                $(".typeahead-degrees").typeahead({source: res});
+            }).fail(function (jqXHR, textStatus, errorThrown) {
+                console.error("AJAX call failed: " + textStatus + ", " + errorThrown);
+            });
             var other_diet = $('#id_other_diet');
             var diet = $('#id_diet');
             var parent = other_diet.parent('div').parent('div');
