--- a/hackers/templates/phases/ticket.html
+++ b/hackers/templates/phases/ticket.html
@@ -23,6 +23,8 @@
 {% else %}
     <p> When decisions are released, you'll be able to see your results on this page.<br>
         If you have any questions or concerns, you can still reach us at {{ static_values.email|urlize }}<br>
-        Edit your application <a href="?phase=application">here</a></p>
+        {% if application.can_be_edit %}
+            Edit your application <a href="?phase=application">here</a></p>
+        {% endif %}
 {% endif %}
 
